--- a/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid" style="padding-right: 2rem;">
 <div class="row">
   <div class="col-12" *ngIf="searchResults">
-    <h4>Risultati ricerca <span class="red-sardcoin">{{searchText}}</span> in <span class="text-primary">{{category.name.toLowerCase()}}</span></h4>
+    <h4>Risultati ricerca <span class="red-sardcoin">{{searchText}}</span> in <span class="text-primary">{{category.name}}</span></h4>
     <h5 *ngIf="coupons.length === 0">La ricerca non ha prodotto risultati.</h5>
   </div>
 
