--- a/src/app/errors/404.component.html
+++ b/src/app/errors/404.component.html
@@ -7,7 +7,7 @@
           <h4 class="pt-3">Oops! Pagina non trovata.</h4>
           <p class="text-muted">La pagina che stai cercando non è stata trovata.</p>
         </div>
-        <div class="input-prepend input-group">
+        <!--<div class="input-prepend input-group">
           <div class="input-group-prepend">
             <span class="input-group-text"><i class="fa fa-search"></i></span>
           </div>
@@ -15,7 +15,8 @@
           <span class="input-group-append">
             <button class="btn btn-info" type="button">Cerca</button>
           </span>
-        </div>
+        </div>-->
+        <button class="btn btn-info text-center" [routerLink]="['/']">Torna al sito</button>
       </div>
     </div>
   </div>
