--- a/src/app/core/breadcrumb/breadcrumb.component.html
+++ b/src/app/core/breadcrumb/breadcrumb.component.html
@@ -1,7 +1,7 @@
 <nav class=" fixed-desktop" aria-label="breadcrumb" *ngIf="isUserLoggedIn || !authPage">
 
-  <!-- SEARCHBAR COUPONS -->
-  <div *ngIf="!userType || userType == 2 || showcasePage"
+  <!-- SEARCHBAR COUPONS *ngIf="!userType || userType == 2 || showcasePage" -->
+  <div *ngIf="showcasePage"
        class="breadcrumb border bg-gray-sardcoin border-gray-sardcoin border-left-0 border-right-0 h-100"
        [ngStyle]="{'padding': isUserLoggedIn ? '0px 9px 0px 72px' : '0px 9px 0px 16px'}" style="max-height: 49px">
     <div class="row col-md-9 my-auto">
@@ -53,10 +53,10 @@
       </button> <!-- Search button -->
     </div>
 
-    <div class="col my-auto" style="margin-right: -0.5em; text-align: right">
+    <div *ngIf="isUserConsumer()" class="col my-auto" style="margin-right: -0.5em; text-align: right">
       <div *ngIf="desktopMode">
         <a *ngIf="cart.length === 0" class="text-white">Il tuo carrello <b class="text-info">è vuoto</b>! </a>
-        <a *ngIf="cart.length > 0" class="text-white cursor-pointer" [routerLink]="['/reserved-area/consumer/cart']">
+        <a *ngIf="cart.length > 0" class="text-white cursor-pointer" [routerLink]="['/cart']">
           {{cart.length === 1 ? "C'è" : 'Ci sono'}} <b class="text-info">{{cart.length}} {{cart.length === 1 ?
           'coupon' : 'coupons'}}</b> nel tuo carrello.
           <i style="font-size: 1.5em !important;" class="fas fa-shopping-cart text-warning"></i>
