--- a/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
+++ b/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
@@ -109,7 +109,7 @@
                 </div>
               </div>
             </div>
-            <div *ngIf="markedPrivate" class="form-group row">
+            <div  class="form-group row">
               <label class="col-sm-2 col-form-label">Privato per: </label>
               <div class="col-sm-8">
                 <ng-select formControlName="broker"
