--- a/src/app/features/reserved-area/consumer/coupon-order/coupon-order.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-order/coupon-order.component.html
@@ -1,3 +1,4 @@
+<!--
 <div class="container-fluid table-responsive d-none d-md-none d-lg-block">
   <div class="col-md-12">
     <table *ngIf="orders" class="table table-striped table-borderless">
@@ -7,8 +8,8 @@
           <th scope="col" style="width: 30%">Data acquisto</th>
           <th scope="col" style="width: 30%">Costo totale</th>
 
-          <!--<th scope="col" style="width: 15%">Prezzo</th>-->
-          <!--<th scope="col" style="width: 25%">Stato</th>-->
+          &lt;!&ndash;<th scope="col" style="width: 15%">Prezzo</th>&ndash;&gt;
+          &lt;!&ndash;<th scope="col" style="width: 25%">Stato</th>&ndash;&gt;
           <th scope="col" style="width: 20%"></th>
         </tr>
       </thead>
@@ -37,7 +38,7 @@
       </tbody>
     </table>
   </div>
-</div> <!-- XL + LG VIEW -->
+</div> &lt;!&ndash; XL + LG VIEW &ndash;&gt;
 <div class="d-none d-md-block d-lg-none">
   <div class="col-md-12">
     <table class="table table-striped">
@@ -47,7 +48,7 @@
         <th scope="col" style="width: 30%">Data acquisto</th>
         <th scope="col" style="width: 30%">Cost totale</th>
 
-        <!--<th scope="col" style="width: 25%">Stato</th>-->
+        &lt;!&ndash;<th scope="col" style="width: 25%">Stato</th>&ndash;&gt;
         <th scope="col" style="width: 20%"></th>
       </tr>
       </thead>
@@ -76,7 +77,7 @@
       </tbody>
     </table>
   </div>
-</div> <!-- MD VIEW -->
+</div> &lt;!&ndash; MD VIEW &ndash;&gt;
 <div class="d-block d-md-none">
   <div class="col-md-12">
     <table class="table table-striped">
@@ -105,7 +106,7 @@
         <td>
           <span style="font-size: 17px;">{{formatPrice(order.total)}}</span> <br/>
         </td>
-        <!--<td [ngStyle]="{color: token.verifier ? 'red' : '#24cc32'}" class="text-uppercase td-state"><b>{{formatState(token.verifier)}}</b></td>-->
+        &lt;!&ndash;<td [ngStyle]="{color: token.verifier ? 'red' : '#24cc32'}" class="text-uppercase td-state"><b>{{formatState(token.verifier)}}</b></td>&ndash;&gt;
         <td class="text-center">
           <button type="button" (click)="details(order)" class="btn btn-info text-white">
             <i class="fas fa-info-circle"></i>
@@ -115,4 +116,55 @@
       </tbody>
     </table>
   </div>
-</div> <!-- SM VIEW -->
+</div> &lt;!&ndash; SM VIEW &ndash;&gt;
+-->
+<!--<ng-container >-->
+<div class="container-fluid">
+  <!--<div class="row">-->
+  <div *ngFor="let order of orders" class="row col-8 ml-1 mb-2 pr-0 bg-white rounded border">
+    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 pl-md-0 ">
+      <div class="row p-1 bg-secondary">
+        <div class="col-3">
+          <p class="text-uppercase small mb-0">Ordine effettuato il:</p>
+          <p class="text-uppercase small mb-0">{{formatDate(order.purchase_time)}}</p>
+        </div>
+        <div class="col-3">
+          <p class="text-uppercase small mb-0">Totale</p>
+          <p class="text-uppercase small mb-0">EUR {{formatPrice(order.total)}}</p>
+        </div>
+        <div class="col-3 offset-3 text-right">
+          <p class="text-uppercase small mb-0">Ordine n.</p>
+          <p class="text-uppercase small mb-0">{{order.id}}</p>
+        </div>
+
+      </div>
+      <div [class]="classMx4" style="padding: 5px">
+        <div class="card-body p-4">
+          <h3 class="card-title mb-0">Ordine N° {{order.id}}</h3>
+          <br>
+          <i class="h5">Costo totale {{formatPrice(order.total)}}</i>
+          <br/>
+          <i class="h5">{{formatDate(order.purchase_time)}}</i>
+          <br>
+          <br>
+          <div class="h5">Coupon inclusi nell'ordine:</div>
+          <br>
+          <div *ngFor="let coupon of coupons">
+            <div *ngIf="coupon.id" class='card card-body p-4'>
+              <i class="la la-trash text-info h5 "> {{coupon.title}} </i>
+              <i class="la la-trash text-info h5 "> Quantità {{coupon['quantityBought']}}</i>
+              <i class="la la-trash text-info h5 "> Prezzo unitario {{formatPrice(coupon.price)}}</i>
+            </div>
+          </div>
+          <br>
+
+          <button class="btn btn-danger btn-retry mr-2" (click)="retry()"><i class="fas fa-arrow-circle-left"></i> I
+            miei ordini
+          </button>
+          <button class="btn btn-primary btn-retry" (click)="myPurchases()"> I miei acquisti</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!--</ng-container>-->
