--- a/src/app/features/reserved-area/consumer/coupon-order/coupon-order.component.scss
+++ b/src/app/features/reserved-area/consumer/coupon-order/coupon-order.component.scss
@@ -8,7 +8,7 @@
   object-fit: cover
 }
 
-p {
+/*p {
   display: block;
   max-width: 400px;
   height: 109.2px;
@@ -16,9 +16,9 @@ p {
   line-height: 1.4;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
-  /*overflow: hidden;*/
-  /*text-overflow: ellipsis;*/
-}
+  !*overflow: hidden;*!
+  !*text-overflow: ellipsis;*!
+}*/
 
 h5 {
   display: block; /* Fallback for non-webkit */
